edit max width of embedded plots

--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <a href=\"https://plot.ly/~chelsea_lyn/10253/\" target=\"_blank\" title=\"Layout of Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10253.png\" alt=\"Ideograms\" style=\"max-width: 100%;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
+    "    <a href=\"https://plot.ly/~chelsea_lyn/10253/\" target=\"_blank\" title=\"Layout of Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10253.png\" alt=\"Ideograms\" style=\"max-width: 800px;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
     "    <script data-plotly=\"chelsea_lyn:10253\"  src=\"https://plot.ly/embed.js\" async></script>\n",
     "</div>"
    ]
@@ -162,14 +162,14 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <a href=\"https://plot.ly/~chelsea_lyn/10255/\" target=\"_blank\" title=\"Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10255.png\" alt=\"Ideograms\" style=\"max-width: 100%;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
+    "    <a href=\"https://plot.ly/~chelsea_lyn/10255/\" target=\"_blank\" title=\"Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10255.png\" alt=\"Ideograms\" style=\"max-width: 800px; width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
     "    <script data-plotly=\"chelsea_lyn:10255\"  src=\"https://plot.ly/embed.js\" async></script>\n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -203,6 +203,14 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
