--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -32,11 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10253.embed\" height=\"600px\" width=\"800px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from plotly import tools\n",
     "import plotly.plotly as py\n",
@@ -100,31 +114,23 @@
     "\n",
     "# Put all elements of the layout together\n",
     "layout = {'shapes': shapes,\n",
-    "          'xaxis1':xaxes[0],\n",
-    "          'xaxis2':xaxes[1],\n",
-    "          'xaxis3':xaxes[2],\n",
-    "          'xaxis4':xaxes[3],\n",
-    "          'yaxis1':yaxes[0],\n",
-    "          'yaxis2':yaxes[1],\n",
-    "          'yaxis3':yaxes[2],\n",
-    "          'yaxis4':yaxes[3],\n",
-    "          'width':chart_width\n",
+    "          'xaxis1': xaxes[0],\n",
+    "          'xaxis2': xaxes[1],\n",
+    "          'xaxis3': xaxes[2],\n",
+    "          'xaxis4': xaxes[3],\n",
+    "          'yaxis1': yaxes[0],\n",
+    "          'yaxis2': yaxes[1],\n",
+    "          'yaxis3': yaxes[2],\n",
+    "          'yaxis4': yaxes[3],\n",
+    "          'autosize': False,\n",
+    "          'width': chart_width,\n",
+    "          'height': 600\n",
     "}\n",
     "\n",
     "### ADD RATING DATA HERE ###\n",
     "\n",
     "fig = dict(data=traces, layout=layout)\n",
-    "url = py.plot(fig, filename='linear-gauge-layout')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div>\n",
-    "    <a href=\"https://plot.ly/~chelsea_lyn/10253/\" target=\"_blank\" title=\"Layout of Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10253.png\" alt=\"Ideograms\" style=\"max-width: 800px;width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
-    "    <script data-plotly=\"chelsea_lyn:10253\"  src=\"https://plot.ly/embed.js\" async></script>\n",
-    "</div>"
+    "py.iplot(fig, filename='linear-gauge-layout')"
    ]
   },
   {
@@ -137,11 +143,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10255.embed\" height=\"600px\" width=\"800px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ratings = [4.5, 5, 1, 2.75]\n",
     "\n",
@@ -154,22 +174,12 @@
     "    ))\n",
     "\n",
     "fig = dict(data=traces, layout=layout)\n",
-    "url = py.plot(fig, filename='linear-gauge')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div>\n",
-    "    <a href=\"https://plot.ly/~chelsea_lyn/10255/\" target=\"_blank\" title=\"Linear-Gauge Chart\" style=\"display: block; text-align: center;\"><img src=\"https://plot.ly/~chelsea_lyn/10255.png\" alt=\"Ideograms\" style=\"max-width: 800px; width: 800px;\"  width=\"800\" onerror=\"this.onerror=null;this.src='https://plot.ly/404.png';\" /></a>\n",
-    "    <script data-plotly=\"chelsea_lyn:10255\"  src=\"https://plot.ly/embed.js\" async></script>\n",
-    "</div>"
+    "py.iplot(fig, filename='linear-gauge')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -209,8 +219,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
