mv pandas docs that were stuck on python pg

--- a/_posts/python/privacy/privacy.ipynb
+++ b/_posts/python/privacy/privacy.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -430,6 +430,14 @@
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+     ]
     }
    ],
    "source": [
@@ -444,7 +452,7 @@
     "    'privacy.ipynb', 'python/privacy', 'Public, Private vs Secret Graphs',\n",
     "    'How to set the privacy settings of plotly graphs in python.'\n",
     "    'Three examples of different privacy options: public, private and secret.',\n",
-    "    title = 'Python Public, Private and Secret Graphs | plotly',\n",
+    "    name = 'Python Public, Private and Secret Graphs',\n",
     "    thumbnail='/images/privacy.png', language='python',\n",
     "    page_type='example_index', has_thumbnail='false', display_as='file_settings')    "
    ]
