add python delete doc

--- a/_posts/python/privacy/privacy.ipynb
+++ b/_posts/python/privacy/privacy.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Public, Private and Secret Graphs in Python"
+    "#Public, Private and Secret Graphs <br> in Python"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Make sure you have the latest Plotly"
+    "Make sure you have an updated version of Plotly"
    ]
   },
   {
@@ -236,19 +236,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Making <b>ALL</b> of your Plotly Plots Private"
+    "## Making <b>ALL</b> of your Plotly Plots Private\n",
+    "####This example uses [Plotly's REST API](https://api.plot.ly/v2/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Import `json` and `requests`"
+    "#####Import `json` and `requests` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Collect filenames of <b>ALL</b> of your plots and update `world_readable` of each plot with a PATCH request"
+    "#####Collect filenames of <b>ALL</b> of your plots and <br>update `world_readable` of each plot with a PATCH request"
    ]
   },
   {
@@ -395,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -429,14 +430,6 @@
      "output_type": "stream",
      "text": [
       "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
    ],
