add linked subplots r example

--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -157,7 +157,21 @@ p$filename <- "overwrite_subplot"
 p
 ```
 
-Notice the first plot also displays the title even though it was added after this plot was generated. This is because the file was updated (i.e., a new plot is not generated). 
+Notice the first plot also displays the title even though it was added after this plot was generated. This is because the file was updated (i.e., a new plot is not generated).
+
+### Subplots With Shared X-Axes
+
+This example uses `add_trace` instead of `subplot` to create linked subplots. The same logic can be applied to create subplots with shared y-axes.
+
+```{r, message=FALSE}
+library(plotly)
+# Define xaxis and yaxis
+p <- plot_ly(economics, x = date, y = uempmed, xaxis = "x1", yaxis = "y1")
+p <- add_trace(p, x = date, y = unemploy, xaxis = "x1", yaxis = "y2")
+p <- layout(p, showlegend = FALSE, yaxis = list(anchor = 'x', domain = c(0, 0.45)),
+            yaxis2 = list(anchor = 'x', domain = c(0.55, 1), title = 'unemploy'))
+p
+```
 
 ### Subplot Maps
 
