--- a/_posts/r/2015-07-30-subplots.Rmd
+++ b/_posts/r/2015-07-30-subplots.Rmd
@@ -21,69 +21,89 @@ Sys.setenv("plotly_api_key"="q0lz6r5efr")
 
 ### Basic Subplot
 
-```{r, message=FALSE}
+```{r, results='hide'}
 library(plotly)
-subplot(
+p <- subplot(
   plot_ly(economics, x = date, y = uempmed),
   plot_ly(economics, x = date, y = unemploy),
   margin = 0.05
 ) %>% layout(showlegend = FALSE)
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/basic")
 ```
 
 ### Subplot Rows
 
 Specify the number of rows with `nrows`.
 
-```{r, message=FALSE}
+```{r, results='hide'}
 # Basic subplot
 library(plotly)
-subplot(
+p <- subplot(
   plot_ly(economics, x = date, y = uempmed),
   plot_ly(economics, x = date, y = unemploy),
   margin = 0.05,
   nrows=2
 ) %>% layout(showlegend = FALSE)
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/rows")
 ```
 
 ### Creating Subplots with `group`
 
 A more powerful way to make subplots is by using the `group` argument to split the data into different plotly "traces" in conjunction with `subplot()`.
 
-```{r, message=FALSE}
-plot_ly(iris, x = Petal.Length, y = Petal.Width,
-        group = Species, mode = "markers")
+```{r, results='hide'}
+p <- plot_ly(iris, x = Petal.Length, y = Petal.Width,
+             group = Species, mode = "markers")
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/group")
 ```
 
 Together, `group` and `subplot()` can be used to anchor traces onto different axes. In this example, each trace binds itself to one of the 3 x axes with one of these arguments: `xaxis = "x1"`, `xaxis = "x2"`, `xaxis = "x3"`.
 
-```{r, message=FALSE}
+```{r, results='hide'}
 iris$id <- as.integer(iris$Species)
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
              xaxis = paste0("x", id), mode = "markers")
-subplot(p)
+p <- subplot(p)
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/group2")
 ```
 
 ### Coordinating Color Across Subplots
 
 To achieve a consistent color/variable relationship across the subplots, use the `color` argument with `subplot()` .
 
-```{r, message=FALSE}
-subplot(
+```{r, results='hide'}
+p <- subplot(
 	plot_ly(iris, x = Sepal.Length, y = Sepal.Width, color = Species, mode = "markers"),
 	plot_ly(iris, x = Petal.Length, y = Petal.Width, color = Species, mode = "markers"),
 	margin = 0.05
 )
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/color")
 ```
 
 ### Customizing Axes
 
 You can customize each of these axes. "`x1`", "`x2`", "`x3`", etc assigned in the "traces" is related to "`xaxis`", "`xaxis2`", "`xaxis2`", "`xaxis3`" etc inside the plot's `layout`. [View the entire list of configurable axis properties](https://plot.ly/r/reference/#xaxis). Note that it is "`xaxis`" not "`xaxis1`".
 
-```{r, message=FALSE}
+```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
              xaxis = paste0("x", id), mode = "markers")
 
-layout(
+p <- layout(
     subplot(p),
     xaxis = list(title = "x axis 1", showgrid=FALSE),
     xaxis2 = list(title = "x axis 2", showgrid=FALSE),
@@ -93,13 +113,17 @@ layout(
     yaxis2 = list(title = "y axis 2", showgrid=FALSE),
     yaxis3 = list(title = "y axis 3", showgrid=FALSE)
 )
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/custom_axes")
 ```
 
 If you are familar with [plotly.js](https://plot.ly/javascript), you might notice that `subplot` is generating axis objects with the appropriate anchor and domain properties. If you are interested, [view how subplots are created in plotly.js](https://plot.ly/javascript/subplots) or [view the JSON representation of this graph](https://plot.ly/~RplotBot/1408.json).
 
 Since `subplot()` does not assume x/y axes are on a common scale, it does not impose any restrictions on the range by default. However, you can change this by pre-specifying the range of the [axis objects](https://plot.ly/r/reference/#xaxis) via the `layout()` function.
 
-```{r, message=FALSE}
+```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
              xaxis = paste0("x", id), mode = "markers")
 
@@ -109,17 +133,21 @@ p <- layout(
   yaxis = list(range = range(Petal.Width) + c(-0.1, 0.1))
 )
 
-subplot(p)
+p <- subplot(p)
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/custom_axes2")
 ```
 
 Note that the `xaxis` and `yaxis` properties that are specified in `layout` are transferred to all of the `xaxis` and `yaxis` keys that are created in the `subplot` command. The example above could also be written as:
 
-```{r, message=FALSE}
+```{r, results='hide'}
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
              xaxis = paste0("x", id), mode = "markers")
 
 p <- subplot(p)
-layout(p,
+p <- layout(p,
   xaxis = list(range = range(iris$Petal.Length) + c(-0.1, 0.1)),
   yaxis = list(range = range(iris$Petal.Width) + c(-0.1, 0.1)),
 
@@ -129,6 +157,10 @@ layout(p,
   xaxis3 = list(range = range(iris$Petal.Length) + c(-0.1, 0.1)),
   yaxis3 = list(range = range(iris$Petal.Width) + c(-0.1, 0.1))
 )
+p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/custom_axes3")
 ```
 
 So, if you would like all of your axes to have the same properties, assign the properties in `layout` before splitting the traces into subplots.
@@ -139,7 +171,7 @@ To overwrite or update subplots use `plotly_build()` with `subplot()` then set `
 
 Create an initial subplot:
 
-```{r, message=FALSE}
+```{r, results='hide'}
 iris$id <- as.integer(iris$Species)
 p <- plot_ly(iris, x = Petal.Length, y = Petal.Width, group = Species,
 						 xaxis = paste0("x", id), mode = "markers")
@@ -147,14 +179,20 @@ p <- plotly_build(subplot(p))
 p$filename <- "overwrite_subplot"
 p
 ```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/overwrite_subplot")
+```
 
 Then update or modify the plot and view the modifications in the same plot.
 
-```{r, message=FALSE}
+```{r, results='hide'}
 p <- layout(title="Overwrite Subplots")
 p <- plotly_build(subplot(p))
 p$filename <- "overwrite_subplot"
 p
+```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/overwrite_subplot")
 ```
 
 Notice the first plot also displays the title even though it was added after this plot was generated. This is because the file was updated (i.e., a new plot is not generated).
@@ -163,7 +201,7 @@ Notice the first plot also displays the title even though it was added after thi
 
 This example uses `add_trace` instead of `subplot` to create linked subplots. The same logic can be applied to create subplots with shared y-axes.
 
-```{r, message=FALSE}
+```{r, results='hide'}
 library(plotly)
 # Define xaxis and yaxis
 p <- plot_ly(economics, x = date, y = uempmed, xaxis = "x1", yaxis = "y1")
@@ -172,12 +210,15 @@ p <- layout(p, showlegend = FALSE, yaxis = list(anchor = 'x', domain = c(0, 0.45
             yaxis2 = list(anchor = 'x', domain = c(0.55, 1), title = 'unemploy'))
 p
 ```
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="subplot/shared_x-axes")
+```
 
 ### Subplot Maps
 
 Axes objects in maps are different than in cartesian `x`, `y` plots. With maps, each trace has a `geo` ID that assigns that trace the subplot with the same id. Just add a `geo = paste0("geo", id)` key inside `plot_ly` to assign traces to different subplots created with `subplot`.
 
-```{r, message=FALSE, height=900}
+```{r, results='hide'}
 # US map small multiples
 library(plotly)
 df <- read.csv('https://raw.githubusercontent.com/plotly/datasets/master/1962_2006_walmart_store_openings.csv')
@@ -209,7 +250,11 @@ p <- plot_ly(df, type = 'scattergeo', lon = LON, lat = LAT, group = YEAR,
          height = 900,
          hovermode = F)
 
-subplot(p, nrows = 9)
+p <- subplot(p, nrows = 9)
+p
+```
+```{r, results='asis', echo=FALSE, height=900, message=FALSE}
+plotly_POST(p, filename="subplot/maps")
 ```
 
 [View more examples of maps in plotly and R.](https://plot.ly/r/#maps)
