Add generated HTML for semicircular gauge meter

--- a/_posts/python/gauge-chart/semicircular-gauge.ipynb
+++ b/_posts/python/gauge-chart/semicircular-gauge.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -254,7 +254,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,6 +306,67 @@
     "}\n",
     "\n",
     "py.iplot(fig, filename='gauge-meter-chart')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/IPython/nbconvert.py:13: ShimWarning:\n",
+      "\n",
+      "The `IPython.nbconvert` package has been deprecated. You should import from ipython_nbconvert instead.\n",
+      "\n",
+      "/usr/local/lib/python2.7/dist-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "\n",
+    "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
+    "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
+    "\n",
+    "import publisher\n",
+    "publisher.publish(\n",
+    "    'semicircular-gauge.ipynb', 'python/gauge-meter', 'Python Gauge Meter | plotly',\n",
+    "    'How to make guage meter charts in Python with Plotly. ',\n",
+    "    name = 'Semicircular-Gauge-Meter',\n",
+    "    thumbnail='thumbnail/linear-gauge.jpg', language='python',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=31)"
    ]
   },
   {
