Update text alignment for gauge meter

--- a/_posts/r/2015-12-31-network-graph.Rmd
+++ b/_posts/r/2015-12-31-network-graph.Rmd
@@ -18,42 +18,45 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-We are using the well-known social network of `Zachary's karate club`. GML format file can be collected from [here](https://gist.github.com/pravj/9168fe52823c1702a07b).
+# Network Graphs in R
+
+##### We are using the well-known social network of `Zachary's karate club`. GML format file can be collected from [here](https://gist.github.com/pravj/9168fe52823c1702a07b).
+
+##### read graph file and update layout
 
 ```{r, results='hide', message=FALSE}
 library(igraph)
 library(plotly)
 
-# read graph file and update layout
 G <- read.graph("karate.gml", format = c("gml"))
 L <- layout.circle(G)
 ```
 
+##### vertices and edges for the graph
 ```{r, results='hide', message=FALSE}
-# vertices and edges for the graph
 vs <- V(G)
 es <- as.data.frame(get.edgelist(G))
 ```
 
+##### count of vertices and edges
 ```{r, results='hide', message=FALSE}
-# count of vertices and edges
 Nv <- length(vs)
 Ne <- length(es[1]$V1)
 ```
 
+##### node positions
 ```{r, results='hide', message=FALSE}
-# node positions
 Xn <- L[,1]
 Yn <- L[,2]
 ```
 
+##### draw network nodes
 ```{r, results='hide', message=FALSE}
-# draw network nodes
 network <- plot_ly(type = "scatter", x = Xn, y = Yn, mode = "markers", text = vs$label, hoverinfo = "text")
 ```
 
+##### creates shapes for edges
 ```{r, results='hide', message=FALSE}
-# creates shapes for edges
 edge_shapes <- list()
 for(i in 1:Ne) {
   v0 <- es[i,]$V1
@@ -72,8 +75,8 @@ for(i in 1:Ne) {
 }
 ```
 
+##### add edges to the network
 ```{r, results='hide', message=FALSE}
-# add edges to the network
 network <- layout(
   network,
   title = 'Karate Network',
