--- a/_posts/r/2015-12-31-semicircle-gauge-chart.Rmd
+++ b/_posts/r/2015-12-31-semicircle-gauge-chart.Rmd
@@ -18,8 +18,7 @@ Sys.setenv("plotly_username"="RPlotBot")
 Sys.setenv("plotly_api_key"="q0lz6r5efr")
 ```
 
-
-
+# Gauge Meter Chart in R
 
 ##### Outline
 
@@ -112,6 +111,7 @@ base_plot <- layout(
 base_plot
 
 ```
+
 
 For the `filled-triangle`, the first point `(0.235, 0.5)` is left to the center of meter `(0.24, 0.5)`, the second point `(0.24 0.62)` is representing the current position on the `semi-circle` and the third point `(0.245, 0.5)` is just right to the center.
 
