Added new layout for all the pages, fixed the border issue in iframes

--- a/_posts/r/2015-07-30-insets.md
+++ b/_posts/r/2015-07-30-insets.md
@@ -7,7 +7,7 @@ layout: base
 thumbnail: thumbnail/insets.jpg
 language: r
 page_type: example_index
-has_thumbnail: true
+has_thumbnail: layout_opt
 display_as: basic
 order: 2
 ---
