Fixed R docs page

--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -101,7 +101,7 @@ plotly_POST(p, filename = "r-docs/midwest-boxplots", world_readable=TRUE)
 
 <iframe style="border: none; width: 100%; height: 500px;" src="https://plot.ly/~chriddyp/1799.embed"></iframe>
 
-
+<h2>Documentation Examples</h2>
 {% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true | sort: "order"  %}
 {% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
 
