add/fix ggplot2 link

--- a/_posts/2015-07-30-r-index.md
+++ b/_posts/2015-07-30-r-index.md
@@ -26,8 +26,8 @@ plot_ly(d, x = carat, y = price, text = paste("Clarity: ", clarity),
 Plotly graphs are interactive. Click-drag to zoom, shift-click to pan, double-click to autoscale.
 
 
-#### Know and love `ggplot2`? Try `ggplotly`
-
+#### Know and love `ggplot2`?
+Try <a href="https://plot.ly/ggplot2/" target="_blank">ggplotly</a>
 
 ```r
 p <- ggplot(data = d, aes(x = carat, y = price)) +
