add filled lines example to line doc

--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -16,29 +16,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.8.8'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -597,6 +574,137 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#####Filled Lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10921.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import plotly.plotly as py\n",
+    "from plotly.graph_objs import *\n",
+    "\n",
+    "x = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "x_rev = x[::-1]\n",
+    "\n",
+    "# Line 1\n",
+    "y1 = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "y1_upper = [2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n",
+    "y1_lower = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "y1_lower = y1_lower[::-1]\n",
+    "\n",
+    "# Line 2\n",
+    "y2 = [5, 2.5, 5, 7.5, 5, 2.5, 7.5, 4.5, 5.5, 5]\n",
+    "y2_upper = [5.5, 3, 5.5, 8, 6, 3, 8, 5, 6, 5.5]\n",
+    "y2_lower = [4.5, 2, 4.4, 7, 4, 2, 7, 4, 5, 4.75]\n",
+    "y2_lower = y2_lower[::-1]\n",
+    "\n",
+    "# Line 3\n",
+    "y3 = [10, 8, 6, 4, 2, 0, 2, 4, 2, 0]\n",
+    "y3_upper = [11, 9, 7, 5, 3, 1, 3, 5, 3, 1]\n",
+    "y3_lower = [9, 7, 5, 3, 1, -.5, 1, 3, 1, -1]\n",
+    "y3_lower = y3_lower[::-1]\n",
+    "\n",
+    "trace1 = Scatter(\n",
+    "    x=x+x_rev,\n",
+    "    y=y1_upper+y1_lower,\n",
+    "    fill='tozerox',\n",
+    "    fillcolor='rgba(0,100,80,0.2)',\n",
+    "    line=Line(color='transparent'),\n",
+    "    showlegend=False,\n",
+    "    name='Fair',\n",
+    ")\n",
+    "trace2 = Scatter(\n",
+    "    x=x+x_rev,\n",
+    "    y=y2_upper+y2_lower,\n",
+    "    fill='tozerox',\n",
+    "    fillcolor='rgba(0,176,246,0.2)',\n",
+    "    line=Line(color='transparent'),\n",
+    "    name='Premium',\n",
+    "    showlegend=False,\n",
+    ")\n",
+    "trace3 = Scatter(\n",
+    "    x=x+x_rev,\n",
+    "    y=y3_upper+y3_lower,\n",
+    "    fill='tozerox',\n",
+    "    fillcolor='rgba(231,107,243,0.2)',\n",
+    "    line=Line(color='transparent'),\n",
+    "    showlegend=False,\n",
+    "    name='Fair',\n",
+    ")\n",
+    "trace4 = Scatter(\n",
+    "    x=x,\n",
+    "    y=y1,\n",
+    "    line=Line(color='rgb(0,100,80)'),\n",
+    "    mode='lines',\n",
+    "    name='Fair',\n",
+    ")\n",
+    "trace5 = Scatter(\n",
+    "    x=x,\n",
+    "    y=y2,\n",
+    "    line=Line(color='rgb(0,176,246)'),\n",
+    "    mode='lines',\n",
+    "    name='Premium',\n",
+    ")\n",
+    "trace6 = Scatter(\n",
+    "    x=x,\n",
+    "    y=y3,\n",
+    "    line=Line(color='rgb(231,107,243)'),\n",
+    "    mode='lines',\n",
+    "    name='Ideal',\n",
+    ")\n",
+    "\n",
+    "data = Data([trace1, trace2, trace3, trace4, trace5, trace6])\n",
+    "\n",
+    "layout = Layout(\n",
+    "    paper_bgcolor='rgb(255,255,255)',\n",
+    "    plot_bgcolor='rgb(229,229,229)',\n",
+    "    xaxis=XAxis(\n",
+    "        gridcolor='rgb(255,255,255)',\n",
+    "        range=[1,10],\n",
+    "        showgrid=True,\n",
+    "        showline=False,\n",
+    "        showticklabels=True,\n",
+    "        tickcolor='rgb(127,127,127)',\n",
+    "        ticks='outside',\n",
+    "        zeroline=False\n",
+    "    ),\n",
+    "    yaxis=YAxis(\n",
+    "        gridcolor='rgb(255,255,255)',\n",
+    "        showgrid=True,\n",
+    "        showline=False,\n",
+    "        showticklabels=True,\n",
+    "        tickcolor='rgb(127,127,127)',\n",
+    "        ticks='outside',\n",
+    "        zeroline=False\n",
+    "    ),\n",
+    ")\n",
+    "fig = Figure(data=data, layout=layout)\n",
+    "py.iplot(fig, filename= 'shaded_lines')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### References"
    ]
   },
@@ -609,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -642,17 +750,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
+      "\u001b[33mYou are using pip version 7.1.2, however version 8.0.2 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning:\n",
+      "\n",
+      "Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "\n"
      ]
     }
    ],
@@ -669,8 +779,8 @@
     "    'How to make line charts in Python with Plotly. '\n",
     "    'Examples on creating and styling line charts in Python with Plotly.',\n",
     "    name = 'Line Charts',\n",
-    "    thumbnail='/images/line-plots.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=2)"
+    "    thumbnail='thumbnail/line-plots.jpg', language='python',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='basic', order=2)"
    ]
   },
   {
@@ -699,7 +809,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
