Added 3d Scatter Plot axes label example
https://github.com/plotly/documentation/issues/308

--- a/_posts/r/2015-07-30-figure-labels.Rmd
+++ b/_posts/r/2015-07-30-figure-labels.Rmd
@@ -2,7 +2,7 @@
 title: Axes Labels in R
 name: Axes Labels
 permalink: r/figure-labels
-description: How to set the title and axis-titles in python.
+description: How to set the title and axis-titles in R
 layout: base
 thumbnail: figure-labels.jpg
 language: r
@@ -13,12 +13,11 @@ display_as: layout_opt
 
 ```{r, echo = FALSE, message=FALSE}
 knitr::opts_chunk$set(message = FALSE)
-Sys.setenv("plotly_username"="RPlotBot")
-Sys.setenv("plotly_api_key"="q0lz6r5efr")
+Sys.setenv("plotly_username" = "RPlotBot")
+Sys.setenv("plotly_api_key" = "q0lz6r5efr")
 ```
 # Figure Labels
-```{r, message=FALSE}
-
+```{r, message=FALSE, results='hide'}
 
 library(plotly)
 f <- list(
@@ -34,7 +33,37 @@ y <- list(
   title = "y Axis",
   titlefont = f
 )
-plot_ly(x = rnorm(10), y = rnorm(10), mode = "markers") %>%
+p <- plot_ly(x = rnorm(10), y = rnorm(10), mode = "markers") %>%
   layout(xaxis = x, yaxis = y)
+p
+```
 
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename="scatter2d/axis-labels")
+```
+
+# Figure Labels for 3d Charts
+
+```{r, results = 'hide'}
+library(plotly)
+set.seed(123)
+
+n <- 100
+theta <- runif(n,0,2*pi)
+u <- runif(n,-1,1)
+x <- sqrt(1 - u^2)*cos(theta)
+y <- sqrt(1 - u^2)*sin(theta)
+z <- u
+
+p <- plot_ly(x = x, y = y, z = z, type = "scatter3d", mode = "markers", color = z) %>% 
+  layout(title = "Layout options in a 3d scatter plot",
+         scene = list(
+           xaxis = list(title = "Cos"), 
+           yaxis = list(title = "Sin"), 
+           zaxis = list(title = "Z")))
+p
+```
+
+```{r, results='asis', echo=FALSE, message=FALSE}
+plotly_POST(p, filename = "scatter3d/axis-labels")
 ```
