change python image

--- a/_posts/python/line-plots/lines.ipynb
+++ b/_posts/python/line-plots/lines.ipynb
@@ -779,7 +779,7 @@
     "    'How to make line charts in Python with Plotly. '\n",
     "    'Examples on creating and styling line charts in Python with Plotly.',\n",
     "    name = 'Line Charts',\n",
-    "    thumbnail='thumbnail/line-plots.jpg', language='python',\n",
+    "    thumbnail='thumbnail/line-plot.jpg', language='python',\n",
     "    page_type='example_index', has_thumbnail='true', display_as='basic', order=2)"
    ]
   },
