Fix Shiny and ggplot2 examples
- Fixes #282
- Fixes #314

--- a/_posts/r/2015-07-30-shiny.Rmd
+++ b/_posts/r/2015-07-30-shiny.Rmd
@@ -31,9 +31,9 @@ The key idea is to pass a plotly object to `renderPlotly()` on the server and pl
 
 #### `ui.R`
 ```{r}
-
 library(shiny)
 library(plotly)
+library(ggplot2movies)  # Needed for the 'movies' data set
 
 shinyUI(fluidPage(
   titlePanel("Movie Ratings!"),
@@ -48,9 +48,6 @@ shinyUI(fluidPage(
 
 #### `server.R`
 ```{r}
-library(shiny)
-library(plotly)
-
 data(movies, package = "ggplot2")
 minx <- min(movies$rating)
 maxx <- max(movies$rating)
@@ -79,6 +76,7 @@ You can also convert ggplot2 objects to plotly objects with `ggplotly()`
 ```{r}
 library(shiny)
 library(plotly)
+library(ggplot2movies)  # Needed for the 'movies' data set
 
 shinyUI(fluidPage(
   titlePanel("Movie Ratings!"),
@@ -93,9 +91,6 @@ shinyUI(fluidPage(
 
 #### `server.R`
 ```{r}
-library(shiny)
-library(plotly)
-
 data(movies, package = "ggplot2")
 minx <- min(movies$rating)
 maxx <- max(movies$rating)
