--- a/_posts/r/2015-07-30-shiny.md
+++ b/_posts/r/2015-07-30-shiny.md
@@ -34,6 +34,7 @@ Plotly works with Shiny entirely *client-side* either through [plotly.js](https:
 ```r
 library(shiny)
 library(plotly)
+library(ggplot2movies)  # Needed for the 'movies' data set
 
 shinyUI(fluidPage(
   titlePanel("Movie Ratings!"),
@@ -49,10 +50,6 @@ shinyUI(fluidPage(
 #### `server.R`
 
 ```r
-library(shiny)
-library(plotly)
-
-data(movies, package = "ggplot2")
 minx <- min(movies$rating)
 maxx <- max(movies$rating)
 
@@ -79,6 +76,7 @@ shinyServer(function(input, output) {
 ```r
 library(shiny)
 library(plotly)
+library(ggplot2movies)  # Needed for the 'movies' data set
 
 shinyUI(fluidPage(
   titlePanel("Movie Ratings!"),
@@ -94,10 +92,6 @@ shinyUI(fluidPage(
 #### `server.R`
 
 ```r
-library(shiny)
-library(plotly)
-
-data(movies, package = "ggplot2")
 minx <- min(movies$rating)
 maxx <- max(movies$rating)
 
