--- a/_posts/r/2015-07-30-axes.md
+++ b/_posts/r/2015-07-30-axes.md
@@ -154,3 +154,43 @@ plot_ly(x = s, y = s) %>%
 ```
 
 <iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/445.embed" width="800" frameBorder="0"></iframe>
+
+### Modifying axes for 3d plots
+```r
+library(plotly)
+set.seed(123)
+
+# Create Random Data
+ds <- diamonds[sample(1:nrow(diamonds), size = 1000),]
+
+# Create lists for axis properties
+f1 <- list(
+  family = "Arial, sans-serif",
+  size = 18,
+  color = "lightgrey")
+
+f2 <- list(
+  family = "Old Standard TT, serif",
+  size = 14,
+  color = "#ff9999")
+
+axis <- list(
+  titlefont = f1,
+  tickfont = f2,
+  showgrid = F
+)
+
+scene = list(
+  xaxis = axis,
+  yaxis = axis,
+  zaxis = axis,
+  camera = list(eye = list(x = -1.25, y = 1.25, z = 1.25)))
+
+# Plot
+plot_ly(ds, x = carat, y = cut, z = price, group = color, type = "scatter3d", mode = "markers",
+        marker = list(opacity = 0.6, size = 4)) %>% 
+  layout(title = "3D Scatter plot", scene = scene)
+
+```
+
+<iframe height="600" id="igraph" scrolling="no" seamless="seamless" src="https://plot.ly/~RPlotBot/2825.embed" width="800" frameBorder="0"></iframe>
