Custom hover text examples

--- a/_posts/r/2015-07-30-get-requests.Rmd
+++ b/_posts/r/2015-07-30-get-requests.Rmd
@@ -50,3 +50,17 @@ Add new traces to `fig$data[[(length(fig$data)+1)]]` as a list
 fig$data[[(length(fig$data)+1)]] <- list(x=c(1,2), y=c(1,2), xaxis="x2", yaxis="y2")
 fig
 ```
+
+### Adding custom hover text after downloading a plotly graph
+
+Use `plotly_build()` first and then modify the plotly object as such
+
+```{r, message = F}
+fig <- get_figure("rplotbot", 2833)
+fig <- plotly_build(fig)
+
+fig$data[[1]]$hoverinfo <- "text"
+fig$data[[1]]$text <- paste("Displacement = ", mtcars$disp, "Miles Per Gallon = ", mtcars$mpg)
+
+fig
+```
