--- a/_posts/r/2015-07-30-text-and-annotations.Rmd
+++ b/_posts/r/2015-07-30-text-and-annotations.Rmd
@@ -82,3 +82,12 @@ for (i in seq_len(nrow(mtcars))) {
 
 plot_ly(filename="r-docs/multiple-annotations") %>% layout(annotations = a)
 ```
+
+### Custom Hover Text
+```{r, message = F}
+p <- mtcars %>% 
+  plot_ly(x = disp, y = mpg, mode = "markers", color = cyl, size = wt, 
+          hoverinfo = "text",
+          text = paste("Displacement = ", mtcars$disp, "Miles Per Gallon = ", mtcars$mpg)) %>% 
+  layout(title ="Custom Hover Text")
+```
