linear gauge python 3 edits

--- a/_posts/python/gauge-chart/linear-gauge.ipynb
+++ b/_posts/python/gauge-chart/linear-gauge.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -40,13 +40,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10253.embed\" height=\"600px\" width=\"800px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://stage.plot.ly/~chelsea_lyn/9301.embed\" height=\"600px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
     "    yaxes.append({'anchor':'x'+str(i+1), 'range':[-.5,6.5],\n",
     "                  'showgrid': False, 'showline': False, 'zeroline': False,\n",
     "                  'ticks':'inside', 'ticklen': chart_width/20,\n",
-    "                  'ticktext':scale_labels[i], 'tickvals':range(len(scale_labels[i]))\n",
+    "                  'ticktext':scale_labels[i], 'tickvals':[0., 1., 2., 3., 4., 5., 6.]\n",
     "                 })\n",
     "\n",
     "# Put all elements of the layout together\n",
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10255.embed\" height=\"600px\" width=\"800px\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://stage.plot.ly/~chelsea_lyn/9303.embed\" height=\"600px\" width=\"800px\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
@@ -212,7 +212,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
+      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n",
+      "\u001b[33mYou are using pip version 7.1.2, however version 8.0.2 is available.\r\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\r\n"
      ]
     },
     {
